--- a/src/ui/Window.ui
+++ b/src/ui/Window.ui
@@ -88,7 +88,7 @@
                         <child>
                           <object class="GtkSearchEntry" id="search_entry">
                             <property name="search-delay">100</property>
-                            <property name="placeholder-text" translatable="true">Search icons in this set</property>
+                            <property name="placeholder-text" bind-source="IcoWindow" bind-property="searchPlaceholderText" bind-flags="sync-create" />
                             <signal name="search-changed" handler="onSearchEntrySearchChanged" />
                           </object>
                         </child>
