--- a/src/ui/Window.ui
+++ b/src/ui/Window.ui
@@ -128,14 +128,15 @@
                           <object class="IcoAllSetsStackView" id="all_sets_view">
                             <!-- TODO: Pass all icon sets into this composite widget -->
                             <property name="searchEntryText" bind-source="search_entry" bind-property="text" bind-flags="sync-create"></property>
+                            <signal name="set-activated" handler="onSetActivated" />
                           </object>
                         </property>
                       </object>
                     </child>
                     <child>
                       <object class="GtkStackPage">
-                        <property name="title">Example set</property>
-                        <property name="name">example_set</property>
+                        <property name="title">Carbon</property>
+                        <property name="name">Carbon</property>
                         <property name="child">
                           <object class="IcoIconSetStackView" id="set_view">
                             <property name="icons" bind-source="IcoWindow" bind-property="currentSetIcons" bind-flags="sync-create"></property>
