Added "activatable" classes to cards

--- a/src/ui/IconTile.ui
+++ b/src/ui/IconTile.ui
@@ -13,6 +13,7 @@
         <style>
           <class name="card"/>
           <class name="card--icon"/>
+          <class name="activatable"/>
         </style>
         <child>
           <object class="GtkLabel" id="icon_label">
