--- a/src/ui/IconSetStackView.ui
+++ b/src/ui/IconSetStackView.ui
@@ -19,6 +19,7 @@
                 <child>
                   <object class="IcoMainPanelView" id="main_panel">
                     <signal name="icon-activated" handler="onIconActivated" />
+                    <signal name="icon-copied" handler="onIconCopied" />
                     <property name="icons" bind-source="IcoIconSetStackView" bind-property="icons" bind-flags="sync-create" />
                   </object>
                 </child>
