--- a/src/ui/IconSetStackView.ui
+++ b/src/ui/IconSetStackView.ui
@@ -19,7 +19,7 @@
                 <child>
                   <object class="IcoMainPanelView" id="main_panel">
                     <signal name="icon-activated" handler="onIconActivated" />
-                    <signal name="icon-copied" handler="onIconCopied" />
+                    <!-- <signal name="icon-copied" handler="onIconCopied" /> -->
                     <property name="icons" bind-source="IcoIconSetStackView" bind-property="icons" bind-flags="sync-create" />
                   </object>
                 </child>
@@ -32,7 +32,9 @@
             <property name="min-content-width">250</property>
             <property name="max-content-width">300</property>
             <child>
-              <object class="IcoDetailsPanel" id="details_panel"></object>
+              <object class="IcoDetailsPanel" id="details_panel">
+
+              </object>
             </child>
           </object>
         </property>
