--- a/src/ui/DetailsPanel.ui
+++ b/src/ui/DetailsPanel.ui
@@ -26,13 +26,21 @@
           </object>
         </child> -->
         <child>
-          <object class="GtkDrawingArea" id="preview_image">
-            <property name="width-request">200</property>
-            <property name="height-request">200</property>
+          <object class="GtkFrame">
+            <property name="width-request">172</property>
+            <property name="height-request">172</property>
             <property name="margin-bottom">24</property>
-            <style>
-              <class name="icon-grid__image" />
-            </style>
+            <child>
+              <object class="GtkDrawingArea" id="preview_image">
+                <property name="margin-top">24</property>
+                <property name="margin-bottom">24</property>
+                <property name="margin-start">24</property>
+              <property name="margin-end">24</property>
+                <style>
+                  <class name="icon-grid__image" />
+                </style>
+              </object>
+            </child>
           </object>
         </child>
 
