--- a/src/ui/IconTile.ui
+++ b/src/ui/IconTile.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <interface>
-  <template class="IcoIconTile" parent="GtkFlowBoxChild">
+  <template class="IcoIconTile">
     <property name="layout-manager">
 			<object class="GtkBoxLayout">
 				<property name="orientation">vertical</property>
