--- a/src/ui/DetailsPanel.ui
+++ b/src/ui/DetailsPanel.ui
@@ -9,10 +9,12 @@
     <child>
       <object class="GtkBox">
         <property name="orientation">vertical</property>
-        <property name="margin-start">16</property>
-        <property name="margin-end">16</property>
-        <property name="margin-top">16</property>
-        <property name="margin-bottom">16</property>
+        <property name="vexpand">true</property>
+        <child>
+          <object class="GtkScrolledWindow">
+          <property name="vexpand">true</property>
+          <property name="min-content-width">250</property>
+          <property name="max-content-width">300</property>
 
         <!-- <child>
           <object class="GtkLabel">
@@ -25,96 +27,117 @@
             </style>
           </object>
         </child> -->
-        <child>
-          <object class="GtkFrame">
-            <property name="width-request">172</property>
-            <property name="height-request">172</property>
-            <property name="margin-bottom">24</property>
             <child>
-              <object class="GtkDrawingArea" id="preview_image">
-                <property name="margin-top">24</property>
-                <property name="margin-bottom">24</property>
-                <property name="margin-start">24</property>
-              <property name="margin-end">24</property>
-                <style>
-                  <class name="icon-grid__image" />
-                </style>
-              </object>
-            </child>
-          </object>
-        </child>
-
-        <child>
-          <object class="GtkListBox">
-            <property name="selection-mode">none</property>
-            <style>
-              <class name="boxed-list"/>
-            </style>
-            <child>
-              <object class="AdwActionRow">
-                <property name="title" translatable="yes">Name</property>
-                <property name="subtitle" bind-source="IcoDetailsPanel" bind-property="label" bind-flags="sync-create"/>
-                <property name="subtitle-selectable">True</property>
-                <style>
-                  <class name="property"/>
-                </style>
-              </object>
-            </child>
-            <!--
-            <child>
-              <object class="AdwActionRow">
-                <property name="title" translatable="yes">Color</property>
+              <object class="GtkBox">
+                <property name="orientation">vertical</property>
+                <property name="margin-start">16</property>
+                <property name="margin-end">16</property>
+                <property name="margin-top">16</property>
+                <property name="margin-bottom">16</property>
                 <child>
-                  <object class="GtkColorDialogButton" id="color_dialog_button">
-                    <property name="valign">3</property>
+                  <object class="GtkFrame">
+                    <property name="width-request">172</property>
+                    <property name="height-request">172</property>
+                    <property name="margin-bottom">24</property>
+                    <child>
+                      <object class="GtkDrawingArea" id="preview_image">
+                        <property name="margin-top">24</property>
+                        <property name="margin-bottom">24</property>
+                        <property name="margin-start">24</property>
+                        <property name="margin-end">24</property>
+                        <style>
+                          <class name="icon-grid__image" />
+                        </style>
+                      </object>
+                    </child>
+                  </object>
+                </child>
+
+                <child>
+                  <object class="GtkListBox">
+                    <property name="selection-mode">none</property>
+                    <style>
+                      <class name="boxed-list"/>
+                    </style>
+                    <child>
+                      <object class="AdwActionRow">
+                        <property name="title" translatable="yes">Name</property>
+                        <property name="subtitle" bind-source="IcoDetailsPanel" bind-property="label" bind-flags="sync-create"/>
+                        <property name="subtitle-selectable">True</property>
+                        <style>
+                          <class name="property"/>
+                        </style>
+                      </object>
+                    </child>
+                    <!--
+                    <child>
+                      <object class="AdwActionRow">
+                        <property name="title" translatable="yes">Color</property>
+                        <child>
+                          <object class="GtkColorDialogButton" id="color_dialog_button">
+                            <property name="valign">3</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
+                    -->
+                    <!-- <child>
+                      <object class="AdwActionRow">
+                        <property name="title" translatable="yes">Open containing folder</property>
+                        <child type="suffix">
+                          <object class="GtkImage">
+                            <property name="icon-name">ico-grid-large-symbolic</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child> -->
                   </object>
                 </child>
               </object>
             </child>
-            -->
-            <!-- <child>
-              <object class="AdwActionRow">
-                <property name="title" translatable="yes">Open containing folder</property>
-                <child type="suffix">
-                  <object class="GtkImage">
-                    <property name="icon-name">ico-grid-large-symbolic</property>
-                  </object>
-                </child>
-              </object>
-            </child> -->
           </object>
         </child>
-
         <child>
           <object class="GtkBox">
             <property name="orientation">vertical</property>
-            <property name="spacing">8</property>
-            <property name="margin-top">48</property>
+            <style>
+              <class name="detailsPanelActionBox"/>
+            </style>
             <child>
-              <object class="AdwSplitButton">
-                <property name="menu-model">icon_details_export_menu</property>
-                <style>
-                  <class name="flat"/>
-                </style>
+              <object class="GtkBox">
+                <property name="orientation">vertical</property>
+                <property name="spacing">8</property>
+                <property name="margin-start">16</property>
+                <property name="margin-end">16</property>
+                <property name="margin-top">16</property>
+                <property name="margin-bottom">16</property>
                 <child>
-                  <object class="AdwButtonContent">
-                    <property name="label" translatable="true">Export as SVG</property>
-                    <property name="icon-name">document-save-symbolic</property>
+                  <object class="AdwSplitButton">
+                    <property name="menu-model">icon_details_export_menu</property>
+                    <style>
+                      <class name="flat"/>
+                    </style>
+                    <child>
+                      <object class="AdwButtonContent">
+                        <property name="label" translatable="true">Export as SVG</property>
+                        <property name="icon-name">document-save-symbolic</property>
+                      </object>
+                    </child>
                   </object>
                 </child>
-              </object>
-            </child>
-            <child>
-              <object class="AdwSplitButton">
-                <property name="menu-model">icon_details_copy_menu</property>
-                <signal name="clicked" handler="onCopyButtonClicked" />
-                <style>
-                  <class name="suggested-action"/>
-                </style>
                 <child>
-                  <object class="AdwButtonContent">
-                    <property name="label" translatable="true">Copy as SVG</property>
-                    <property name="icon-name">edit-copy-symbolic</property>
+                  <object class="AdwSplitButton">
+                    <property name="menu-model">icon_details_copy_menu</property>
+                    <signal name="clicked" handler="onCopyButtonClicked" />
+                    <style>
+                      <class name="suggested-action"/>
+                    </style>
+                    <child>
+                      <object class="AdwButtonContent">
+                        <property name="label" translatable="true">Copy as SVG</property>
+                        <property name="icon-name">edit-copy-symbolic</property>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
