--- a/src/ui/IconSetStackView.ui
+++ b/src/ui/IconSetStackView.ui
@@ -26,7 +26,10 @@
         </property>
         <property name="sidebar">
           <object class="IcoDetailsPanel" id="details_panel">
-
+            <property name="icon" bind-source="IcoIconSetStackView" bind-property="activeIcon" bind-flags="sync-create"/>
+            <property name="setName" bind-source="IcoIconSetStackView" bind-property="setName" bind-flags="sync-create" />
+            <property name="setIconsCount" bind-source="IcoIconSetStackView" bind-property="iconsCount" bind-flags="sync-create" />
+            <property name="setLicense">Test license</property>
           </object>
         </property>
       </object>
