--- a/src/ui/DetailsPanel.ui
+++ b/src/ui/DetailsPanel.ui
@@ -41,7 +41,7 @@
                   <object class="GtkLabel">
                     <property name="label" bind-source="IcoDetailsPanel" bind-property="setName" bind-flags="sync-create"/>
                     <property name="halign">1</property>
-                    <property name="margin-bottom">6</property>
+                    <property name="margin-bottom">8</property>
                     <style>
                       <class name="title-3"/>
                     </style>
@@ -50,7 +50,7 @@
                 <child>
                   <object class="GtkLabel" id="icons_count">
                     <property name="halign">1</property>
-                    <property name="margin-bottom">6</property>
+                    <property name="margin-bottom">4</property>
                     <style>
                     </style>
                   </object>
@@ -154,6 +154,9 @@
                           <object class="GtkButton">
                             <property name="icon-name">folder-open-symbolic</property>
                             <property name="valign">3</property>
+                            <style>
+                              <class name="flat"/>
+                            </style>
                           </object>
                         </child>
                       </object>
