--- a/src/ui/DetailsPanel.ui
+++ b/src/ui/DetailsPanel.ui
@@ -232,6 +232,7 @@
                         <property name="icon-name">edit-copy-symbolic</property>
                       </object>
                     </property>
+                    <signal name="clicked" handler="onCopyButtonClicked"/>
                     <style>
                       <class name="suggested-action"/>
                     </style>
