--- a/src/ui/IconSetStackView.ui
+++ b/src/ui/IconSetStackView.ui
@@ -29,7 +29,7 @@
             <property name="icon" bind-source="IcoIconSetStackView" bind-property="activeIcon" bind-flags="sync-create"/>
             <property name="setName" bind-source="IcoIconSetStackView" bind-property="setName" bind-flags="sync-create" />
             <property name="setIconsCount" bind-source="IcoIconSetStackView" bind-property="iconsCount" bind-flags="sync-create" />
-            <property name="setLicense">Test license</property>
+            <property name="setLicense" bind-source="IcoIconSetStackView" bind-property="setLicense" bind-flags="sync-create" />
           </object>
         </property>
       </object>
