--- a/src/ui/DetailsPanel.ui
+++ b/src/ui/DetailsPanel.ui
@@ -134,6 +134,53 @@
                         </style>
                       </object>
                     </child>
+                    <child>
+                      <object class="AdwExpanderRow">
+                        <property name="title" translatable="true">Tags</property>
+                        <property name="subtitle">weather, sky, cloudy</property>
+                        <style>
+                          <class name="property"/>
+                        </style>
+                        <child>
+                          <object class="AdwActionRow">
+                            <property name="title" translatable="true">weather</property>
+                            <child type="suffix">
+                              <object class="GtkButton">
+                                <property name="icon-name">edit-delete-symbolic</property>
+                                <property name="valign">3</property>
+                              </object>
+                            </child>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="AdwActionRow">
+                            <property name="title" translatable="true">sky</property>
+                            <child type="suffix">
+                              <object class="GtkButton">
+                                <property name="icon-name">edit-delete-symbolic</property>
+                                <property name="valign">3</property>
+                              </object>
+                            </child>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="AdwActionRow">
+                            <property name="title" translatable="true">cloudy</property>
+                            <child type="suffix">
+                              <object class="GtkButton">
+                                <property name="icon-name">edit-delete-symbolic</property>
+                                <property name="valign">3</property>
+                              </object>
+                            </child>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="AdwEntryRow">
+                            <property name="title" translatable="true">Add a tag</property>
+                          </object>
+                        </child>
+                      </object>
+                    </child>
                     <!--
                     <child>
                       <object class="AdwActionRow">
