Added Control + C action to copy the currently selected icon. Refactored the "Copy" button of the DetailsPanel to use this new action. Show this shortcut in the shortcuts window.

--- a/src/gtk/help-overlay.ui
+++ b/src/gtk/help-overlay.ui
@@ -10,6 +10,12 @@
           <object class="GtkShortcutsGroup">
             <property name="title" translatable="yes" context="shortcut window">General</property>
             <child>
+		          <object class="GtkShortcutsShortcut">
+			          <property name="title">Copy Selected Icon</property>
+			          <property name="accelerator">&lt;Control&gt;c</property>
+		          </object>
+	          </child>
+            <child>
               <object class="GtkShortcutsShortcut">
                 <property name="title" translatable="yes" context="shortcut window">Show Shortcuts</property>
                 <property name="action-name">win.show-help-overlay</property>
@@ -17,8 +23,8 @@
             </child>
             <child>
               <object class="GtkShortcutsShortcut">
-                <property name="title" translatable="yes" context="shortcut window">Quit</property>
-                <property name="action-name">app.quit</property>
+                <property name="title" translatable="yes" context="shortcut window">Close window</property>
+                <property name="action-name">window.close</property>
               </object>
             </child>
           </object>
