--- a/src/ui/DetailsPanel.ui
+++ b/src/ui/DetailsPanel.ui
@@ -273,13 +273,13 @@
                 -->
                 <child>
                   <object class="GtkButton">
+                    <property name="action-name">set-view.copy</property>
                     <property name="child">
                       <object class="AdwButtonContent">
                         <property name="label" translatable="true">Copy as SVG</property>
                         <property name="icon-name">edit-copy-symbolic</property>
                       </object>
                     </property>
-                    <signal name="clicked" handler="onCopyButtonClicked"/>
                     <style>
                       <class name="suggested-action"/>
                     </style>
