--- a/src/css/style.css
+++ b/src/css/style.css
@@ -12,12 +12,6 @@
 .icon-grid__label {
   opacity: 0.6;
 }
-.mb-8 {
-  margin-bottom: 2rem;
-}
-.mb-2 {
-  margin-bottom: 0.5rem;
-}
 .iconsGridView {
   background-color: transparent;
 }
@@ -26,4 +20,237 @@
 }
 .mainStackSidebar {
   border: none;
+}
+.dropTargetFrame {
+  border-style: dashed;
+}
+
+
+/* Spacing helper classes */
+
+/* Margin */
+
+.m-24 {
+  margin: 8rem;
+}
+.m-16 {
+  margin: 4rem;
+}
+.m-8 {
+  margin: 2rem;
+}
+.m-6 {
+  margin: 1.5rem;
+}
+.m-4 {
+  margin: 1rem;
+}
+.m-2 {
+  margin: 0.5rem;
+}
+
+
+.mb-24 {
+  margin-bottom: 4rem;
+}
+.mb-16 {
+  margin-bottom: 3rem;
+}
+.mb-8 {
+  margin-bottom: 2rem;
+}
+.mb-6 {
+  margin-bottom: 1.5rem;
+}
+.mb-4 {
+  margin-bottom: 1rem;
+}
+.mb-2 {
+  margin-bottom: 0.5rem;
+}
+
+
+.mt-24 {
+  margin-top: 4rem;
+}
+.mt-16 {
+  margin-top: 3rem;
+}
+.mt-8 {
+  margin-top: 2rem;
+}
+.mt-6 {
+  margin-top: 1.5rem;
+}
+.mt-4 {
+  margin-top: 1rem;
+}
+.mt-2 {
+  margin-top: 0.5rem;
+}
+
+
+.my-24 {
+  margin-top: 4rem;
+  margin-bottom: 4rem;
+}
+.my-16 {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+.my-8 {
+  margin-top: 2rem;
+  margin-bottom: 2rem;
+}
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+.my-4 {
+  margin-top: 1rem;
+  margin-bottom: 1rem;
+}
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
+
+
+.mx-24 {
+  margin-left: 4rem;
+  margin-right: 4rem;
+}
+.mx-16 {
+  margin-left: 3rem;
+  margin-right: 3rem;
+}
+.mx-8 {
+  margin-left: 2rem;
+  margin-right: 2rem;
+}
+.mx-6 {
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+.mx-4 {
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
+
+/* Padding */
+
+.p-24 {
+  padding: 4rem;
+}
+.p-16 {
+  padding: 3rem;
+}
+.p-8 {
+  padding: 2rem;
+}
+.p-6 {
+  padding: 1.5rem;
+}
+.p-4 {
+  padding: 1rem;
+}
+.p-2 {
+  padding: 0.5rem;
+}
+
+
+.pb-24 {
+  padding-bottom: 4rem;
+}
+.pb-16 {
+  padding-bottom: 3rem;
+}
+.pb-8 {
+  padding-bottom: 2rem;
+}
+.pb-6 {
+  padding-bottom: 1.5rem;
+}
+.pb-4 {
+  padding-bottom: 1rem;
+}
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
+
+.pt-24 {
+  padding-top: 4rem;
+}
+.pt-16 {
+  padding-top: 3rem;
+}
+.pt-8 {
+  padding-top: 2rem;
+}
+.pt-6 {
+  padding-top: 1.5rem;
+}
+.pt-4 {
+  padding-top: 1rem;
+}
+.pt-2 {
+  padding-top: 0.5rem;
+}
+
+
+.py-24 {
+  padding-top: 8rem;
+  padding-bottom: 6rem;
+}
+.py-16 {
+  padding-top: 4rem;
+  padding-bottom: 4rem;
+}
+.py-8 {
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+.py-6 {
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+}
+.py-4 {
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+
+
+.px-24 {
+  padding-left: 4rem;
+  padding-right: 4rem;
+}
+.px-16 {
+  padding-left: 3rem;
+  padding-right: 3rem;
+}
+.px-8 {
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+.px-6 {
+  padding-left: 1.5rem;
+  padding-right: 1.5rem;
+}
+.px-4 {
+  padding-left: 1rem;
+  padding-right: 1rem;
+}
+.px-2 {
+  padding-left: 0.5rem;
+  padding-right: 0.5rem;
 }
